resolving rubocop ofenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,15 +1,17 @@
+inherit_from: .rubocop_todo.yml
+
 require:
   - 'rubocop-rails'
   
 AllCops:
- TargetRubyVersion: 3.0 
- NewCops: enable
- Exclude:
-   - 'bin/**/*'
-   - 'config/**/*'
-   - 'db/**/*'
-   - 'node_modules/**/*'
-   - 'vendor/**/*'
+  TargetRubyVersion: 3.0 
+  NewCops: enable
+  Exclude:
+    - 'bin/**/*'
+    - 'config/**/*'
+    - 'db/**/*'
+    - 'node_modules/**/*'
+    - 'vendor/**/*'
 Style/AsciiComments:
   Enabled: false
 Style/ClassAndModuleChildren:
@@ -17,9 +19,9 @@ Style/ClassAndModuleChildren:
 Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
- Enabled: false
+  Enabled: false
 Metrics/BlockLength:
- IgnoredMethods: ['test']
+  IgnoredMethods: ['test']
 Metrics/ClassLength:
   Exclude:
     - 'test/**/*'
