--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "editor.renderWhitespace": "all"
   "editor.tabSize": 2
   "editor.fontSize": 16
-  "editor.fontFamily": "Cascadia Code Regular",
+  "editor.rulers": [80,120]
 }
